tests/fixtures/lua54/errors/package_loaded_manip/input/main.lua
package.loaded["x"] = {}

local x = require("x")
return x
